answers weeks 1 and 2

--- a/notebooks/3-Retrieval_Evaluation_Week1.ipynb
+++ b/notebooks/3-Retrieval_Evaluation_Week1.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "aa6a6f95-91c6-4a08-a3a0-2aafc2d56b77",
    "metadata": {},
    "outputs": [],
@@ -101,16 +101,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c9968b62-3814-40b9-bb2a-8c76968825c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Num queries in Golden Dataset: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">100</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Num queries in Golden Dataset: \u001b[1;36m100\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from src.database.weaviate_interface_v4 import WeaviateWCS\n",
     "from src.preprocessor.preprocessing import FileIO\n",
     "\n",
-    "\n",
     "data_path = '../data/golden_datasets/golden_256.json'\n",
+    "api_key = os.environ['WEAVIATE_API_KEY']\n",
+    "url = os.environ['WEAVIATE_ENDPOINT']\n",
+    "model_path = 'sentence-transformers/all-MiniLM-L6-v2' # '/workspaces/rag-applications/models/allminilm-finetuned-256'\n",
+    "\n",
+    "# data_path = '../data/golden_datasets/golden_256.json'\n",
     "\n",
     "#################\n",
     "##  START CODE ##\n",
@@ -118,12 +136,15 @@
     "\n",
     "\n",
     "### Load QA dataset\n",
-    "golden_dataset = None\n",
+    "# golden_dataset = None\n",
+    "golden_dataset = FileIO.load_json(data_path)\n",
     "\n",
     "### Instantiate Weaviate client and set Collection name\n",
-    "retriever = None\n",
+    "# retriever = None\n",
+    "retriever = WeaviateWCS(endpoint=url, api_key=api_key, model_name_or_path=model_path)\n",
     "# retriever.show_all_collections\n",
-    "collection_name = None\n",
+    "# collection_name = None\n",
+    "collection_name = 'Huberman_minilm_256'\n",
     "\n",
     "\n",
     "#################\n",
@@ -144,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "255bdabd-770e-4b12-8bd8-54e5cdc64f77",
    "metadata": {},
    "outputs": [],
@@ -266,23 +287,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d42568cd-d0e3-4640-8865-37b6dff80307",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Queries: 100%|██████████| 100/100 [00:06<00:00, 14.95it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Total Processing Time: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.11</span> minutes\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Total Processing Time: \u001b[1;36m0.11\u001b[0m minutes\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-07-06 09:53:54.287\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.preprocessor.preprocessing\u001b[0m:\u001b[36msave_as_json\u001b[0m:\u001b[36m109\u001b[0m - \u001b[1mData saved as json file here: ./eval_results/retrieval_eval_256_2025-07-06-09-53-54.json\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "#################\n",
     "##  START CODE ##\n",
     "#################\n",
-    "eval_results = retrieval_evaluation(None, None, None)"
+    "# eval_results = retrieval_evaluation(None, None, None)\n",
+    "\n",
+    "eval_results = retrieval_evaluation(dataset=golden_dataset, \n",
+    "                                    collection_name=collection_name, \n",
+    "                                    retriever=retriever,\n",
+    "                                    retrieve_limit=5,\n",
+    "                                    chunk_size=256,\n",
+    "                                    query_properties=['content'],\n",
+    "                                    return_properties=['doc_id', 'content'],\n",
+    "                                    dir_outpath='./eval_results',\n",
+    "                                    include_miss_info=False\n",
+    "                                    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7e6e8f78-8772-4115-bc3a-7ad40e07eaef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">{</span>\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'n'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">5</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'Retriever'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'sentence-transformers/all-MiniLM-L6-v2'</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'chunk_size'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">256</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'query_props'</span>: <span style=\"font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">'content'</span><span style=\"font-weight: bold\">]</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'kw_raw_hits'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">67</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'vector_raw_hits'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">56</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'kw_mrr'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.55</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'vector_mrr'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.42</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'total_misses'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">21</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'total_questions'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">100</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'kw_hit_rate'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.67</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'vector_hit_rate'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.56</span>\n",
+       "<span style=\"font-weight: bold\">}</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m{\u001b[0m\n",
+       "    \u001b[32m'n'\u001b[0m: \u001b[1;36m5\u001b[0m,\n",
+       "    \u001b[32m'Retriever'\u001b[0m: \u001b[32m'sentence-transformers/all-MiniLM-L6-v2'\u001b[0m,\n",
+       "    \u001b[32m'chunk_size'\u001b[0m: \u001b[1;36m256\u001b[0m,\n",
+       "    \u001b[32m'query_props'\u001b[0m: \u001b[1m[\u001b[0m\u001b[32m'content'\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "    \u001b[32m'kw_raw_hits'\u001b[0m: \u001b[1;36m67\u001b[0m,\n",
+       "    \u001b[32m'vector_raw_hits'\u001b[0m: \u001b[1;36m56\u001b[0m,\n",
+       "    \u001b[32m'kw_mrr'\u001b[0m: \u001b[1;36m0.55\u001b[0m,\n",
+       "    \u001b[32m'vector_mrr'\u001b[0m: \u001b[1;36m0.42\u001b[0m,\n",
+       "    \u001b[32m'total_misses'\u001b[0m: \u001b[1;36m21\u001b[0m,\n",
+       "    \u001b[32m'total_questions'\u001b[0m: \u001b[1;36m100\u001b[0m,\n",
+       "    \u001b[32m'kw_hit_rate'\u001b[0m: \u001b[1;36m0.67\u001b[0m,\n",
+       "    \u001b[32m'vector_hit_rate'\u001b[0m: \u001b[1;36m0.56\u001b[0m\n",
+       "\u001b[1m}\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "print(eval_results)"
    ]
@@ -365,7 +465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -379,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
