--- a/notebooks/4-Reranking_Week2.ipynb
+++ b/notebooks/4-Reranking_Week2.ipynb
@@ -279,7 +279,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import OrderedDict, defaultdict\n",
     "\n",
     "def get_scores_ids(response: list[dict], include_cross_score: bool=False, limit: int=10):\n",
     "    '''\n",
@@ -292,7 +291,6 @@
     "    def round_(score: str, place: int=3):\n",
     "        return round(float(score),place)\n",
     "        \n",
-    "    score_dict = OrderedDict()\n",
     "    if response[0].get('score'):\n",
     "        if include_cross_score: \n",
     "            return {d['doc_id'] : f'Score: {round_(d[\"score\"])}   :   Cross-Score: {round_(d[\"cross_score\"])}' for d in response[:limit]}\n",
@@ -750,7 +748,7 @@
    "outputs": [],
    "source": [
     "# top result before reranking step\n",
-    "results[0]"
+    "hybrid_results[0]"
    ]
   },
   {
@@ -761,7 +759,7 @@
    "outputs": [],
    "source": [
     "#rerank the search results \n",
-    "reranked = reranker.rerank(results, query, apply_sigmoid=True)"
+    "reranked = reranker.rerank(hybrid_results, query, apply_sigmoid=True)"
    ]
   },
   {
